Add knowledge section

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 }
 
 body {
+  min-height: 100vh;
   font-family: Arial, sans-serif;
   line-height: 1.6;
   background: rgb(8, 47, 73);
@@ -13,11 +14,15 @@ body {
   color: #fff;
 }
 
+em {
+  color: #f2e5a9;
+  font-style: normal;
+}
+
 /* Container */
 .container {
   width: 100%;
   margin: 0 auto;
-  padding: 0 10px; /* Default padding for the smallest breakpoint */
 }
 
 /* Breakpoints for container */
@@ -95,6 +100,7 @@ body {
 }
 
 .header__title {
+  padding: 16px;
   display: flex;
   align-items: center;
   height: 60px;
@@ -273,4 +279,95 @@ body {
 .ready:hover a {
   background: #f2e5a9;
   color: #111;
+}
+
+/* Knowledge */
+
+.spacer {
+  height: 50px;
+}
+
+.knowledge {
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 20px;
+  padding-bottom: 100px;
+  color: #fff; /* Matches the text color */
+  border-top: 1px solid #555; /* A subtle separator line at the top */
+}
+
+.knowledge__content {
+  display: flex;
+  flex-direction: column; /* Default to column layout for small screens */
+  align-items: center; /* Center align items for smaller screens */
+  justify-content: space-between; /* Space between for flex children */
+  gap: 20px;
+}
+
+@media (min-width: 992px) {
+  .knowledge__content {
+    flex-direction: row; /* Row layout for larger screens */
+    align-items: flex-start; /* Align items to the top */
+  }
+}
+
+.knowledge__text {
+  text-align: center;
+  max-width: 800px; /* Limits width for better readability */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 992px) {
+  .knowledge__text {
+    text-align: left;
+    max-width: none; /* Remove max width restriction on larger screens */
+  }
+}
+
+.knowledge__title {
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #a5b4fc;
+  padding-top: 2rem;
+}
+
+.knowledge__description {
+  font-size: 1.25rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  color: #e0e7ff;
+}
+
+.knowledge__link-wrapper {
+  margin: 0 auto;
+  text-align: center; /* Center align link on smaller screens */
+}
+
+@media (min-width: 992px) {
+  .knowledge__link-wrapper {
+    text-align: center; /* Align link to the right on larger screens */
+  }
+}
+
+.knowledge__link {
+  font-size: 0.8em;
+  align-self: center;
+  border: none;
+  border-radius: 3em;
+  padding: 0.8em 2em;
+  text-transform: uppercase;
+  text-decoration: none; /* Remove underline from links */
+  display: inline-block; /* Allow padding and dimensions to apply */
+  color: inherit; /* Inherit the text color to match the button text */
+  background-color: #343440;
+}
+
+.knowledge__link:hover {
+  text-decoration: none; /* Ensure no underline on interaction states */
+  outline: none; /* Text color on hover */
+  font-weight: 700;
+  background-color: #f2e5a9;
+  color: #13131d;
 }
