--- a/styles.css
+++ b/styles.css
@@ -503,3 +503,18 @@ em {
 .report-issues li::before {
   display: none;
 }
+
+.version-anchor {
+  color: inherit;
+  text-decoration: none;
+}
+
+.version-anchor:hover {
+  text-decoration: none;
+}
+
+.version-anchor:hover::after {
+  content: " #";
+  color: #f2e5a9;
+  opacity: 0.7;
+}
